--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "body-parser": "^1.15.2",
     "express": "^4.14.0",
+    "moment": "^2.15.1",
     "nedb": "^1.8.0",
     "uuid": "^2.0.3"
   }
